--- a/IncomeStatement_and_BalanceSheet_model.ipynb
+++ b/IncomeStatement_and_BalanceSheet_model.ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Required Packages\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "# Financial_statement ========= work in progress.....! =============\n",
     "\n",
     "\n",
     "class IncomeStatement:\n",
