--- a/README
+++ b/README
@@ -1,48 +1,47 @@
-Financial Statement Projection
+#Financial Statement Projection
 This repository contains Python code for projecting financial statements, including Income Statement, Balance Sheet, and Cash Flow, based on a set of given assumptions and historical data.
 
-Introduction
+## Introduction
 Financial projections are essential for businesses to plan and make informed decisions about their future. This project aims to provide a tool that calculates projected financial statements for a company based on various financial assumptions.
 
-Requirements
+## Requirements
 To run the code, you need the following:
 
-Python 3.x
+Python 3.9 above
 Pandas library
 Install Pandas using:
 
-bash
-Copy code
+``` {bash}
 pip install pandas
-Usage
+```
+## Usage
 Clone the repository to your local machine.
 
 Ensure you have the required assumptions and historical data in a format compatible with the code's input.
 
 Modify the assumptions and historical_data dictionaries in the main.py file with your specific data.
 
-Run the main.py script:
+** Run the main.py script:**
 
-bash
-Copy code
-python main.py
+
 The script will calculate the projected financial statements and display the results on the terminal.
 Structure
 The repository contains the following files:
 
-main.py: The main script that utilizes the IncomeStatement, BalanceSheet, and CashFlow classes to calculate projected financial statements.
-financial_statements.py: This file contains the IncomeStatement, BalanceSheet, and CashFlow classes, which handle the calculation of individual line items for the respective financial statements.
-data.py: This file contains sample data for assumptions and historical data used for testing the code.
-Customization
+The IncomeStatement_and_BalanceSheet_model: The main jupyter Notebook that utilizes the IncomeStatement, BalanceSheet, and CashFlow classes to calculate projected financial statements.
+Icome_statements.py, Balance_sheet_class.py, and the Cash_flow_class.py: This file contains the IncomeStatement, BalanceSheet, and CashFlow classes, which handle the calculation of individual line items for the respective financial statements.
+Assumption_and_historical_data.txt: This file contains sample data for assumptions and historical data used for testing the code.
+
+## Customization
 Feel free to customize the assumptions and historical_data dictionaries in main.py to match your specific company's data.
 
-Contribution
+## Contribution
 Contributions to this project are welcome. If you find any issues or have suggestions for improvements, please open an issue or submit a pull request.
 
-License
+## License
 This project is licensed under the MIT License. See the LICENSE file for details.
 
-Disclaimer
+## Disclaimer
 This code is for educational and demonstration purposes only. It should not be used for making critical financial decisions. Always consult with financial experts and professionals when making important business decisions.
 
 Happy projecting! If you have any questions or need assistance, feel free to contact the repository owner or open an issue. We hope this tool helps you with your financial planning!
